Add gf/numericCast.h and replace uses of boost::numeric_cast in pxr.
(Internal change: 2321032)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ pxr_library(gf
         declare.h
         ilmbase_halfLimits.h
         limits.h
+        numericCast.h
         traits.h
 
     PRIVATE_CLASSES
