--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ pxr_library(gf
     PUBLIC_CLASSES
         bbox3d
         camera
+        color
+        colorSpace
         dualQuatd
         dualQuatf
         dualQuath
@@ -75,12 +77,16 @@ pxr_library(gf
         numericCast.h
         traits.h
 
+    CPPFILES
+        nc/nanocolor.c
+
     PRIVATE_CLASSES
         ostreamHelpers
 
     PRIVATE_HEADERS
         ilmbase_eLut.h
         ilmbase_toFloat.h
+        nc/nanocolor.h
 
     PYTHON_CPPFILES
         moduleDeps.cpp
@@ -170,7 +176,14 @@ pxr_build_test(testGfHardToReach
         gf
     CPPFILES
         testenv/testGfHardToReach.cpp
-) 
+)
+
+pxr_build_test(testGfColor
+    LIBRARIES
+        gf
+    CPPFILES
+        testenv/testGfColor.cpp
+)
 
 pxr_test_scripts(
     testenv/testGfBBox3d.py
@@ -200,6 +213,9 @@ pxr_test_scripts(
 pxr_register_test(testGfBBox3d
     PYTHON
     COMMAND "${CMAKE_INSTALL_PREFIX}/tests/testGfBBox3d"
+)
+pxr_register_test(testGfColor
+    COMMAND "${CMAKE_INSTALL_PREFIX}/tests/testGfColor"
 )
 pxr_register_test(testGfDecomposeRotation
     PYTHON
